# AgenticRAG

./: .gitignore  CONFIG_GUIDE.md  CONFIG_QUICK_REF.md  EVALUATION_GUIDE.md  EVALUATION_IMPLEMENTATION_SUMMARY.md  EVALUATION_SYSTEM_README.md  GOOGLE_JUDGE_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  LLM_JUDGE_EVALUATION.md  LLM_JUDGE_README.md  README.md  REFACTORING_SUMMARY.md  SETUP_SUMMARY.sh  app.py  config.yaml  create_sample_benchmark.py  evaluate.py  example_google_judge.py  main.py  project.toml  pyproject.toml  tempCodeRunnerFile.py  view_results.py
benchmark/: queries.json
raw/: train.csv
src/: config.py
src/logger/: __init__,py
src/rag/doc_proc/: chunker.py  models.py  processor.py
src/rag/evaluation/: __init__.py  google_judge.py  metrics.py
src/rag/generation/: generator.py  langchain_setup.py  prompts.py
src/rag/retrieval/: retriever.py
src/rag/vector_store/: base.py  factory.py  faiss_store.py  in_memory.py
